# mpwm

./: .example_initrc  .example_mpwm  .gitignore  .xinitrc_example  CMakeLists.txt  Makefile  README.md  TODO.md  add_cursor.sh  mpwm.mk  mpwm.orig  remove_cursor.sh
src/: barwin.c  barwin.h  client.c  client.h  cmds.c  cmds.h  common.c  common.h  config.c  config.h  devpair.c  devpair.h  drw.c  drw.h  events.c  events.h  layouts.c  layouts.h  monitor.c  monitor.h  mpwm.c  resolvers.c  resolvers.h  util.c  util.h
